# telnet-gui

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  KNOWN_ISSUES.md  LICENSE  LOG2HTML.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TINTIN.md  TINTIN_GRAMMAR.md  TODO.md  add-data-types.plan.md  build.bat  build.ps1  build.sh  install.bat  install.sh  named-functions.plan.md  telnet-gui.rc  test_runner.sh
.github/workflows/: build.yml
animations/: LICENSE.md  loading-dots-blue.json  notification.json
cmake/: CreateRelease.cmake  GitVersion.cmake  MSYS2Paths.cmake  Release.cmake
examples/: arithmetic.lisp  collection_iteration.lisp  comprehensive.lisp  demo.lisp  error_test.lisp  factorial.lisp  file_io.lisp  hooks_with_state.lisp  let_star.lisp  regex.lisp  string_advanced.lisp  strings.lisp  test_all_features.lisp  utf8_test.lisp
include/: lisp.h  utf8.h
libtelnet-lisp/: CMakeLists.txt  LANGUAGE_REFERENCE.md  PACKAGING.md  README.md
libtelnet-lisp/include/: lisp.h  utf8.h
libtelnet-lisp/repl/: main.c
libtelnet-lisp/src/: builtins.c  env.c  eval.c  lisp.c  print.c  reader.c  utf8.c
libtelnet-lisp/tests/: README.md
libtelnet-lisp/tests/advanced/: collection_iteration.lisp  do_loop.lisp  regex.lisp  tail_recursion.lisp  utf8.lisp
libtelnet-lisp/tests/basic/: format.lisp  integer_ops.lisp  printing.lisp  strings.lisp  symbols.lisp  vectors.lisp
libtelnet-lisp/tests/regression/: error_propagation.lisp  lambda_implicit_progn.lisp  simple_tail.lisp  tail_call_unwrap.lisp
lisp/: bootstrap.lisp  init-post.lisp  init.lisp  slash.lisp  tintin-test.lisp  tintin.lisp
lisp/carrionfields.net/: practice-simple.lisp  seaport.lisp
lisp/contrib/: practice-simple.lisp  practice.lisp  scan-tracker.lisp  seaport.lisp  spell-translator.lisp
lisp/tests/: scan-tracker-test.lisp
repl/: main.c
scripts/: install-libvterm.sh  install-rlottie.sh  release.sh  telnet-gui-clean-small-logs.sh  telnet-gui-log2html.py
src/: animation.c  builtins.c  commands.c  commands.h  dock.c  dock.h  dynamic_buffer.c  env.c  eval.c  glyph_cache.c  glyph_cache.h  glyph_cache_directwrite.c  glyph_cache_directwrite.h  glyph_cache_internal.h  hash_table.c  input.h  input_area.c  input_area.h  lisp.c  lisp.h  main.c  path_utils.c  path_utils.h  print.c  reader.c  regex.c  renderer.c  renderer.h  renderer_backend.h  renderer_backend_sdl.c  telnet.c  telnet.h  term_cell.h  terminal.c  terminal.h  terminal_backend.h  terminal_backend_vterm.c  utf8.c  window.c
telnet-gui/: CMakeLists.txt  KNOWN_ISSUES.md  LOG2HTML.md  README.md  TINTIN.md  TINTIN_GRAMMAR.md  bootstrap-test.lisp  bootstrap.lisp  completion-test.lisp  log2html.py  test_runner.sh  tintin-test.lisp  tintin.lisp
telnet-gui/animations/: LICENSE.md  notification-icon.json
telnet-gui/docs/: ansi-escape-sequences.md  terminal-emulation.md
telnet-gui/scripts/: log2html.py  telnet-gui-log2html.py
telnet-gui/src/: animation.c  animation.h  ansi_sequences.c  ansi_sequences.h  box_drawing.c  box_drawing.h  commands.c  commands.h  dynamic_buffer.h  glyph_cache.c  glyph_cache.h  input.c  input.h  input_area.c  input_area.h  lisp.c  lisp.h  lisp_bridge.c  lisp_bridge.h  main.c  path_utils.c  path_utils.h  renderer.c  renderer.h  renderer_backend.h  renderer_backend_sdl.c  sal_fix.h  telnet.c  telnet.h  term_cell.h  terminal.c  terminal.h  terminal_backend.h  terminal_backend_vterm.c  window.c  window.h
telnet-lisp/: CMakeLists.txt  LANGUAGE_REFERENCE.md  PACKAGING.md  README.md  file1.txt  load_test1.lisp  load_test2.lisp  load_test3.lisp  load_test4.lisp  load_test5.lisp  load_test6.lisp  test_runner.sh
telnet-lisp/include/: file_utils.h  lisp.h  utf8.h
telnet-lisp/repl/: main.c
telnet-lisp/src/: builtins.c  env.c  eval.c  file_utils.c  lineedit.c  lineedit.h  lisp.c  print.c  reader.c  utf8.c
telnet-lisp/tests/: README.md  test-helpers.lisp
telnet-lisp/tests/advanced/: collection_iteration.lisp  cond_case.lisp  condition-system.lisp  do_loop.lisp  docstrings.lisp  equality.lisp  file_io.lisp  let_star.lisp  load.lisp  macros.lisp  named_functions.lisp  optional-parameters.lisp  progn.lisp  quasiquote.lisp  regex.lisp  tail_recursion.lisp  utf8.lisp
telnet-lisp/tests/basic/: alists.lisp  and_or_list.lisp  characters.lisp  format.lisp  hash_tables.lisp  integer_ops.lisp  integers.lisp  length.lisp  list_reverse.lisp  path_expansion.lisp  printing.lisp  recursion.lisp  string-index.lisp  string_number_conversion.lisp  strings.lisp  symbols.lisp  vectors.lisp
telnet-lisp/tests/regression/: cond_case_multi_expr.lisp  core_features.lisp  list_ref_type_check.lisp  multiline_parsing.lisp  nested-unknown-hash-syntax.lisp  tail_call_basic.lisp  tail_call_unwrap.lisp
tests/: README.md  bootstrap-test.lisp  completion-test.lisp  init-post-test.lisp  init-test.lisp  length-test.lisp  notification-test.lisp  practice-simple-test.lisp  practice-test-coverage.md  practice-test.lisp  slash-test.lisp  spell-translator-test.lisp  test-helpers.lisp  test_multiline.lisp  test_regression.lisp  timer-test.lisp  tintin-test.lisp
tests/advanced/: collection_iteration.lisp  do_loop.lisp  file_io.lisp  let_star.lisp  named_functions.lisp  progn.lisp  regex.lisp
tests/basic/: hash_tables.lisp  integers.lisp  recursion.lisp  vectors.lisp
tests/regression/: core_features.lisp  multiline_parsing.lisp
tools/: emacs-format-lisp.bat  emacs-format-lisp.sh  format-all-lisp-files.sh  format-lisp-file-stdin.sh  format-lisp-file.sh
